test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-12 10:16:26.697714

